Created endpoint /text-set/text/by-id/{textId}.
